<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E7ED"
    tools:context=".ui.neighbour_list.ViewNeighbourActivity">

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:background="#E4E6EC"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:text="@string/first_name"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:elevation="@dimen/cardview_default_elevation"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView">

        <TextView
            android:id="@+id/firstNameTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="24sp"
            tools:text="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E5EB" />


        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:drawablePadding="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

        <TextView
            android:id="@+id/phoneNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:drawablePadding="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:drawableLeftCompat="@drawable/ic_baseline_call_24" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:drawablePadding="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            app:drawableLeftCompat="@drawable/ic_baseline_language_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="#FFFFFF"
        android:elevation="@dimen/cardview_default_elevation"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/aboutMeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="6dp"
            android:text="@string/a_propos_de_moi"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E3E5EB" />

        <TextView
            android:id="@+id/commentsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favoriteFloatingActionButton"
        style="@android:style/Widget.ActionButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/favorite"
        android:tint="@android:color/holo_orange_light"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@drawable/ic_star_border_white_24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="385dp" />

</androidx.constraintlayout.widget.ConstraintLayout>